--- a/redbrow/appsettings.json
+++ b/redbrow/appsettings.json
@@ -5,6 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "WebDatabase": "Host=localhost;Port=5432;Database=redbrow;Username=useredbrow;Password=redbrow2111;"
+  }
 }
 
