fix docker compose file

--- a/redbrow/appsettings.json
+++ b/redbrow/appsettings.json
@@ -5,6 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "WebDatabase": "Host=db; Port=5432;Database=postgres;Username=postgres;Password=postgres;"
+  }
+
 }
 
