--- a/redbrow/docker-compose.yml
+++ b/redbrow/docker-compose.yml
@@ -8,7 +8,7 @@ services:
         ports:
             - "8088:80"
         environment:
-            ConnectionString__WebDatabase: "Host=db;Database=postgres;Username=postgres;Password=postgres;"
+            ConnectionString__WebDatabase: "Host=db;Port=5432;Database=postgres;Username=postgres;Password=postgres;"
         depends_on:
             - db
 
